# ApoapseProServer

./: ApoapseServer.sln  README.md
Apoapse.Core/: Apoapse.core.vcxproj  Apoapse.core.vcxproj.filters  ApoapseCore.cpp  ApoapseCore.h  Common.cpp  Common.h  ConfigVariable.h  Diagnostics.h  ILoadCoreDLLAPI.h  ILogger.h  InternalLibraryLoader.h  LogMessage.cpp  Logger.cpp  Logger.h  Platforms.h  ProducerConsumerQueue.cpp  ProducerConsumerQueue.h  SettingsManager.cpp  SettingsManager.h  stdafx.h
ApoapseServer/: ApoapseServer.vcxproj  ApoapseServer.vcxproj.filters  Main.cpp  config.json  stdafx.h
ApoapseServerShared/: ApoapseMessage.cpp  ApoapseMessage.h  ApoapseServer.cpp  ApoapseServer.h  ApoapseServerShared.vcxproj  ApoapseServerShared.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CmdApoapseInstall.cpp  CmdApoapseMessage.cpp  CmdConnect.cpp  CmdCreateInitialAdmin.cpp  CmdCreateRoom.cpp  CmdCreateThread.cpp  CmdFirstUserConnection.cpp  CmdMarkAsRead.cpp  CmdNotifyNewUser.cpp  CmdNotifyNewUser.h  CmdRegisterNewUser.cpp  CmdServerInfo.cpp  CmdServerInfo.h  CmdSyncRequest.cpp  CommandsDef.hpp  DataStructures.hpp  Makefile  OperationObjects.cpp  OperationObjects.h  Permissions.cpp  Permissions.h  ServerCmdManager.cpp  ServerCmdManager.h  ServerConnection.cpp  ServerConnection.h  ServerDatabaseScheme.hpp  ServerEntryPoint.cpp  ServerEntryPoint.h  ServerFileStreamConnection.cpp  ServerFileStreamConnection.h  ServerSettings.cpp  ServerSettings.h  (+8 more)
Code/Apoapse.Core/: Apoapse.core.vcxproj  Apoapse.core.vcxproj.filters  ApoapseCore.cpp  ApoapseCore.h  Common.h  Diagnostics.h  ILogger.h  ISettingsManager.h  JobManager.cpp  JobManager.h  LogMessage.cpp  LogMessage.h  Logger.cpp  Logger.h  SettingsManager.cpp  SettingsManager.h  StringExtensions.cpp  StringExtensions.h  Types.h  stdafx.h
Code/Apoapse.Network/: Apoapse.Network.vcxproj  Apoapse.Network.vcxproj.filters  ApoapseAddress.cpp  ApoapseAddress.h  ApoapseNetwork.cpp  ApoapseNetwork.h  NetMessage.cpp  NetMessage.h  Packet_OLD.h  TCPConnection.cpp  TCPConnection.h  TCPConnection_OLD.h  TCPServer.cpp  TCPServer.h  Test.h  TestConnection.cpp  TestConnection.h  TransportProtocol.h  stdafx.h
Code/Apoapse.Server/: Actor.cpp  Actor.h  Apoapse.Server.vcxproj  Apoapse.Server.vcxproj.filters  ApoapseAddress.cpp  ApoapseAddress.h  ApoapseError.h  ApoapseErrorCode.h  ApoapseOperation.cpp  ApoapseOperation.h  ApoapseServer.cpp  ApoapseServer.h  ByteUtils.h  ClientConnection.cpp  ClientConnection.h  CmdConnect.cpp  CmdConversation.cpp  CmdError.cpp  CmdMessage.cpp  CmdRemoteServerInfo.cpp  CmdSyncRequest.cpp  CmdUnitTest.cpp  Command.cpp  Command.h  CommandsManager.cpp  CommandsManager.h  Common.cpp  Common.h  ConfigVars.cpp  ConfigVars.h  Connect.cpp  Connect.h  ConnectedUsersManager.cpp  ConnectedUsersManager.h  Connection.h  Conversation.cpp  Conversation.h  Database.h  DateTimeUtils.h  Diagnostics.h  (+73 more)
Code/Apoapse.UnitTest/: Apoapse.UnitTest.vcxproj  Apoapse.UnitTest.vcxproj.filters  TestsManager.cpp  TestsManager.h  UnitTest.h
Code/ApoapseServer/: ApoapseServer.vcxproj  ApoapseServer.vcxproj.filters  Main.cpp  config.json  stdafx.h
Code/DatabaseImpl.sqlite/: DatabaseImpl.sqlite.vcxproj  SQLite.cpp  SQLite.h  apoapse_database_skeleton.s3db
Code/ServerConsole/: Main.cpp  ServerConsole.vcxproj  config.json  stdafx.h
Code/UnitTests/: ApoapseAddress.cpp  ByteConverter.cpp  NetMessage.cpp  SettingsManager.cpp  UnitTests.vcxproj  UnitTests.vcxproj.filters  stdafx.h  test_config.json
DatabaseImpl.sqlite/: DatabaseImpl.sqlite.vcxproj  apoapse_database_skeleton.s3db
ServerConsole/: CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  ServerConsole.vcxproj  cmake_install.cmake  config.json
TestClient/: MainWindow.Designer.cs  MainWindow.cs  MainWindow.resx  TestClient.csproj  Uuid.cs
TestClient/Network/: NetMessage.cs  TCPClient.cs
TestClient/Properties/: AssemblyInfo.cs
